--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "expo": "~46.0.9",
@@ -18,11 +20,17 @@
     "nativewind": "^2.0.10",
     "react": "18.0.0",
     "react-currency-formatter": "^1.1.0",
+    "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-animatable": "^1.3.3",
     "react-native-heroicons": "^3.2.0",
+    "react-native-maps": "0.31.1",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.2",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
